--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geolocator: ^9.0.1
   provider: ^6.0.3
   firebase_auth: ^3.4.2
+  email_validator: ^2.1.2
 
 dev_dependencies:
   flutter_test:
